# pillreactp

./: .gitignore  README.md  db.sqlite3  medicines_inputData.py  memo.txt  mysql_to_elasticsearch.py  pharmacies_inputData.py  pyproject.toml  requirement.txt
announcements/: admin.py  models.py  serializers.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_initial.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py
medicines/: admin.py  apps.py  models.py  serializers.py  setting_bulk.py  tests.py  urls.py  views.py
medicines/migrations/: 0001_initial.py  0002_alter_medicine_is_etc.py  0002_alter_medicine_mdpicturepath.py  0002_initial.py
medicines/templates/: search.html  search_medicine.html
pharmacies/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
pharmacies/migrations/: 0001_initial.py  0002_pharmacy_delete_pharmacies.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_date_alter_review_review_photo.py  0003_alter_review_medicine_alter_review_writer.py  0004_remove_review_date.py  0004_review_rating.py  0005_alter_review_medicine_alter_review_rating_and_more.py  0005_review_medicine.py
src/: Routes.js
src/pages/: Counter.js  Gyuri.js  Jeon.js  Login.jsx  Main.js  MyPage.jsx  counter.css
src/styles/: Theme.js
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
